k8s-deployments/api-server/2-full-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-api
  name: data-api-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: data-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
        - image: maulanaysfi/dummy-api-server:0.1.1
          name: data-api-server
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: data-api-service
  namespace: default
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: data-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-api-server
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - data-api.maulanaysfi.my.id
      secretName: data-api-ing-tls
  rules:
    - host: data-api.maulanaysfi.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-api-service
                port:
                  number: 5000
